--- a/KnKTestSys/KnKTestSys.csproj
+++ b/KnKTestSys/KnKTestSys.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="data\species.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="data\species.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
